fix : commit n°5 party 2

--- a/src/main/resources/templates/dogs/form.html
+++ b/src/main/resources/templates/dogs/form.html
@@ -2,7 +2,7 @@
 
 <h1>Ajouter un chien à un maître</h1>
 
-<a href="/master/index" class="ui purple icon button">
+<a href="/master/{{masterID}}" class="ui purple icon button">
 	<i class="angle left icon"></i>
 </a>
 
