--- a/src/main/resources/templates/masters/info.html
+++ b/src/main/resources/templates/masters/info.html
@@ -23,6 +23,10 @@
 	</ul>
 </p>
 
+<a href="/dog/{{id}}/add" class="ui labeled icon green button">
+	<i class="plus icon"></i>Ajouter un Chien
+</a>
+
 {{/master}}
 
 {{> /partials/footer }}
