--- a/src/main/resources/templates/masters/index.html
+++ b/src/main/resources/templates/masters/index.html
@@ -18,7 +18,7 @@
     	<tr>
       		<td>{{firstname}}</td>
       		<td>{{lastname}}</td>
-      		<td>{{nbDogs}}</td>
+      		<td>{{dogs.size}}</td>
       		<td>
       			<a href="/master/{{id}}" class="circular ui icon button">
       				<i class="eye icon"></i>
